--- a/Hermes/src/refactor/AddOrEditActivityToProject.fxml
+++ b/Hermes/src/refactor/AddOrEditActivityToProject.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane fx:id="addOrEditActivityToProject" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="525.0" prefWidth="597.0" styleClass="parent" stylesheets="@application.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="refactor.AddOrEditActivityToProjectController">
    <children>
-      <Button fx:id="button1" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" styleClass="signIn-btn" stylesheets="@application.css" text="Edit Project" textFill="LIGHTSKYBLUE">
+      <Button fx:id="button2" layoutX="14.0" layoutY="125.0" mnemonicParsing="false" onAction="#editActivity" styleClass="signIn-btn" stylesheets="@application.css" text="Edit Project" textFill="LIGHTSKYBLUE">
          <graphic>
             <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -21,5 +22,38 @@
             <Font name="Calibri Bold" size="18.0" />
          </font>
       </Button>
+      <Button fx:id="button1" layoutX="14.0" layoutY="31.0" mnemonicParsing="false" onAction="#addActivity" styleClass="signIn-btn" stylesheets="@application.css" text="Create new activity" textFill="LIGHTSKYBLUE">
+         <graphic>
+            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Images/parallel-tasks-128.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="Calibri Bold" size="18.0" />
+         </font>
+      </Button>
+      <Pane fx:id="hiddenPane" layoutX="258.0" layoutY="34.0" prefHeight="457.0" prefWidth="325.0">
+         <children>
+            <TextField fx:id="activityDescription" layoutX="139.0" layoutY="185.0" styleClass="txtfield" stylesheets="@application.css" />
+            <Label layoutX="32.0" layoutY="36.0" text="Project Id" textFill="LIGHTSKYBLUE" />
+            <TextField fx:id="projectId" layoutX="139.0" layoutY="32.0" styleClass="txtfield" stylesheets="@application.css" />
+            <Label layoutX="32.0" layoutY="87.0" text="Start date" textFill="LIGHTSKYBLUE" />
+            <Label layoutX="32.0" layoutY="138.0" text="End date" textFill="LIGHTSKYBLUE" />
+            <TextField fx:id="startDate" layoutX="139.0" layoutY="83.0" styleClass="txtfield" stylesheets="@application.css" />
+            <TextField fx:id="endDate" layoutX="139.0" layoutY="134.0" styleClass="txtfield" stylesheets="@application.css" />
+            <Label layoutX="20.0" layoutY="189.0" text="Activity description" textFill="LIGHTSKYBLUE" />
+            <Button fx:id="button11" layoutX="100.0" layoutY="280.0" mnemonicParsing="false" onAction="#addActivity" styleClass="signIn-btn" stylesheets="@application.css" text="Add activity" textFill="LIGHTSKYBLUE">
+               <font>
+                  <Font name="Calibri Bold" size="18.0" />
+               </font>
+            </Button>
+            <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="40.0" layoutY="266.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Images/parallel-tasks-128.png" />
+               </image>
+            </ImageView>
+         </children></Pane>
    </children>
 </Pane>
