--- a/Hermes/src/refactor/AddOrEditActivityToProject.fxml
+++ b/Hermes/src/refactor/AddOrEditActivityToProject.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="addOrEditActivityToProject" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="525.0" prefWidth="597.0" styleClass="parent" stylesheets="@application.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="refactor.AddOrEditActivityToProjectController">
+<Pane fx:id="addOrEditActivityToProject" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="525.0" prefWidth="597.0" styleClass="parent" stylesheets="@application.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="refactor.AddOrEditActivityToProjectController">
    <children>
       <Button fx:id="button2" layoutX="14.0" layoutY="125.0" mnemonicParsing="false" onAction="#editActivity" styleClass="signIn-btn" stylesheets="@application.css" text="Edit activity" textFill="LIGHTSKYBLUE">
          <graphic>
@@ -34,26 +34,32 @@
             <Font name="Calibri Bold" size="18.0" />
          </font>
       </Button>
-      <Pane fx:id="hiddenPane" layoutX="258.0" layoutY="34.0" prefHeight="457.0" prefWidth="325.0">
+      <Pane layoutX="258.0" layoutY="31.0">
          <children>
-            <TextField fx:id="activityDescription" layoutX="139.0" layoutY="185.0" styleClass="txtfield" stylesheets="@application.css" />
-            <Label layoutX="32.0" layoutY="36.0" text="Project Id" textFill="LIGHTSKYBLUE" />
-            <Label layoutX="32.0" layoutY="87.0" text="Start date" textFill="LIGHTSKYBLUE" />
-            <Label layoutX="32.0" layoutY="138.0" text="End date" textFill="LIGHTSKYBLUE" />
-            <TextField fx:id="startDate" layoutX="139.0" layoutY="83.0" styleClass="txtfield" stylesheets="@application.css" />
-            <TextField fx:id="endDate" layoutX="139.0" layoutY="134.0" styleClass="txtfield" stylesheets="@application.css" />
-            <Label layoutX="20.0" layoutY="189.0" text="Activity description" textFill="LIGHTSKYBLUE" />
-            <Button fx:id="button11" layoutX="100.0" layoutY="280.0" mnemonicParsing="false" onAction="#addActivity" styleClass="signIn-btn" stylesheets="@application.css" text="Add activity" textFill="LIGHTSKYBLUE">
-               <font>
-                  <Font name="Calibri Bold" size="18.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="40.0" layoutY="266.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../Images/parallel-tasks-128.png" />
-               </image>
-            </ImageView>
-            <Label fx:id="LblProject" layoutX="199.0" layoutY="36.0" textFill="LIGHTSKYBLUE" />
-         </children></Pane>
+            <Pane fx:id="hiddenPane" prefHeight="457.0" prefWidth="325.0">
+               <children>
+                  <TextField fx:id="activityDescription" layoutX="139.0" layoutY="185.0" styleClass="txtfield" stylesheets="@application.css" />
+                  <Label layoutX="32.0" layoutY="36.0" text="Project Id" textFill="LIGHTSKYBLUE" />
+                  <Label layoutX="32.0" layoutY="87.0" text="Start date" textFill="LIGHTSKYBLUE" />
+                  <Label layoutX="32.0" layoutY="138.0" text="End date" textFill="LIGHTSKYBLUE" />
+                  <TextField fx:id="startDate" layoutX="139.0" layoutY="83.0" styleClass="txtfield" stylesheets="@application.css" />
+                  <TextField fx:id="endDate" layoutX="139.0" layoutY="134.0" styleClass="txtfield" stylesheets="@application.css" />
+                  <Label layoutX="20.0" layoutY="189.0" text="Activity description" textFill="LIGHTSKYBLUE" />
+                  <Button fx:id="button11" layoutX="100.0" layoutY="280.0" mnemonicParsing="false" onAction="#addActivity" styleClass="signIn-btn" stylesheets="@application.css" text="Add activity" textFill="LIGHTSKYBLUE">
+                     <font>
+                        <Font name="Calibri Bold" size="18.0" />
+                     </font>
+                  </Button>
+                  <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="40.0" layoutY="266.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../Images/parallel-tasks-128.png" />
+                     </image>
+                  </ImageView>
+                  <Label fx:id="LblProject" layoutX="199.0" layoutY="36.0" textFill="LIGHTSKYBLUE" />
+               </children>
+            </Pane>
+            <Pane prefHeight="457.0" prefWidth="325.0" styleClass="parent" stylesheets="@application.css" />
+         </children>
+      </Pane>
    </children>
 </Pane>
